Fixed a layout bug making the footer larger than it should be on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -235,7 +235,7 @@ input:focus, textarea:focus, select:focus {
 #mainFooter {
     background-color: #B6CA8B;
     width: 100%;
-    padding: 0.5em;
+    padding: 0.5em 0;
 }
 #mainFooter p, #mainFooter .vcard {
     margin: 0em 0 0.5em 0.5em;
